<resources>
    <string name="app_name">quizz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ir_para_o_jogo">Ir para o jogo</string>
    <string name="adivinhe_o_n_mero">Adivinhe o número</string>
    <string name="nome">Nome</string>
    <string name="coloque_seu_nome_para_come_ar">Coloque seu nome para começar:</string>
    <string name="projeto_feito_por_thiago_vin_cius">Projeto feito por Thiago vinícius</string>
    <string name="como_jogar">Como jogar ?</string>
    <string name="username" />
    <string name="tentativas_final">Você terminou em X tentativas</string>
    <string name="voltar_para_o_in_cio">Voltar para o início</string>
    <string name="titulo" />
    <string name="detalhes" />
    <string name="_1">-1</string>
    <string name="plus_1">+1</string>
    <string name="userNumber">0</string>
    <string name="checar">Checar</string>
</resources>